@@ -7,6 +7,7 @@
 - preserve deleted records when updating catalogs
 - preserve msgctxt entries in catalogs (#1680554)
 - OS X: Sparkle is now used for automatic updates
+- OS X: fixed spell checker to use catalog's language
 
 
 Version 1.3.7
